--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div class="app"></div>
-    <script src="public/js/bundle.js"></script>
+    <script src="public/jsbundle.js"></script>
 </body>
 </html>
