--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ahigher | A streetwear brand.</title>
+    <title>Ahigher.</title>
 </head>
 <body>
     <div class="app"></div>
-    <script src="public/js/bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
