--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="public/img/favicon-16x16" sizes="16x16">
+    <link rel="icon" type="image/png" href="public/img/favicon-32x32" sizes="32x32">
+    <link rel="icon" type="image/png" href="public/img/favicon-96x96" sizes="96x96">
     <title>Ahigher.</title>
 </head>
 <body>
